--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,16 @@
 .header  {
+  display: flex;
+  flex-direction: row;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .logo {
+  margin-left: auto;
+  margin-right: auto;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -12,6 +19,10 @@
 }
 
 ul {
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding: 0;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
