--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -14,12 +14,19 @@ body {
   align-items: center;
   justify-content: center;
 }
-
+.header{
+  font-weight: bold;
+  font-size: larger
+}
 .modal {
+  display: flex;
+  padding: 15px;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  flex: none;
+  gap: 10px;
 }
 
 .icon {
@@ -33,23 +40,34 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: bolder;
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
 }
-
+.header-flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.right{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.buttons{
+  display: flex;
+  gap: 5px;
+}
 button {
   cursor: pointer;
   padding: 8px 16px;
