--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,14 +1,20 @@
 body,
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
-
+.main-container{
+  min-height: 100%;
+}
 .container {
   text-align: center;
-  height: 100%;
+  min-height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
 }
 
 .container div {
@@ -21,22 +27,30 @@ html {
 }
 
 .header {
+  grid-column: 1 / 3;
   background-color: #006157;
 }
 
 .sidebar {
+  grid-row: 2 / 5;
   background-color: #005B94;
 }
 
 .nav {
+  grid-column: 2;
+  grid-row: 2 / 3;
   background-color: #642cde;
 }
 
 .article {
+  grid-column: 2;
+  grid-row: 3 / 5;
   background-color: #7E1DC3;
 }
 
 .footer {
+  grid-column: span 2;
+  grid-row: 5 / 6;
   background-color: #393f4d;
 }
 
