--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
   font-family: Arial, sans-serif;
+  transition: transform .2s linear;
 }
-
 button {
   border-radius: 8px;
   border: none;
@@ -16,4 +16,12 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+}
+
+button {
+  transition: transform .3s ease-in-out;
+}
+
+button:hover {
+  transform: scale(1.2)
 }
