--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -34,8 +34,9 @@ button {
   position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -150%);
+  transition: transform .5s ease-out, opacity .4s ease;
   transform-origin: center;
-  transform: translate(-50%, -50%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
@@ -56,6 +57,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
