--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -17,7 +17,7 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
+  transform-origin: top;
   display: none;
 }
 
@@ -27,6 +27,17 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  animation: .5s drop ease-in-out;
 }
 
-
+@keyframes drop {
+  from {
+    transform: scaleY(0%);
+  }
+  75% {
+    transform: scaleY(115%);
+  }
+  to {
+    transform: scaleY(100%);
+  }
+}
